Guide index: add all 6 bonus rounds, activate R9/R10, update progress to 16/16

--- a/guide/index.html
+++ b/guide/index.html
@@ -48,6 +48,11 @@ body{font-family:'Inter',sans-serif;background:#fafaf8;color:#1a1a1a;line-height
 .round-card.completed{border-left:3px solid #28a745}
 .round-card.current{border-left:3px solid #0080c6}
 .round-card.locked{border-left:3px solid #ddd;opacity:.6;pointer-events:none}
+.round-card.bonus{border-left:3px solid #9c27b0;background:linear-gradient(135deg,rgba(156,39,176,.03),rgba(255,255,255,.9))}
+.round-card.bonus:hover{border-color:#7b1fa2}
+.round-card.bonus .topic-tag{background:#f3e5f5;color:#7b1fa2}
+.round-card.bonus:hover .topic-tag{background:#9c27b0;color:#fff}
+.status-bonus{background:#f3e5f5;color:#7b1fa2}
 .round-number{font-family:'Space Mono',monospace;font-size:.65rem;color:#999;letter-spacing:.15em;text-transform:uppercase;margin-bottom:8px;display:flex;align-items:center;gap:10px}
 .round-status{font-size:.55rem;padding:2px 8px;border-radius:10px;letter-spacing:.08em}
 .status-done{background:#e8f5e9;color:#2e7d32}
@@ -89,12 +94,12 @@ body{font-family:'Inter',sans-serif;background:#fafaf8;color:#1a1a1a;line-height
     {% include breadcrumb.html %}
     <h1 class="page-title">HFT ML Guide</h1>
     <p class="page-subtitle">Convex Optimization + Deep Learning</p>
-    <p class="page-desc">Python 기초부터 시작하여 Convex Optimization과 Deep Learning을 결합한 고빈도 시스템 트레이딩까지. 10라운드 커리큘럼으로 구성된 올인원 학습 가이드입니다.</p>
+    <p class="page-desc">Python 기초부터 시작하여 Convex Optimization과 Deep Learning을 결합한 고빈도 시스템 트레이딩까지. 10라운드 + 6 보너스 라운드(수학·금융 기초 올인원)로 구성된 올인원 학습 가이드입니다.</p>
 
     <div class="progress-overview">
         <span class="progress-label">Overall Progress</span>
-        <div class="progress-bar"><div class="progress-fill" style="width:80%"></div></div>
-        <span class="progress-text">8 / 10 Rounds</span>
+        <div class="progress-bar"><div class="progress-fill" style="width:100%"></div></div>
+        <span class="progress-text">16 / 16 Complete</span>
     </div>
 
     <div class="round-list">
@@ -110,6 +115,19 @@ body{font-family:'Inter',sans-serif;background:#fafaf8;color:#1a1a1a;line-height
             </div>
         </a>
 
+        <a href="/guide/bonus-01/" class="round-card bonus completed">
+            <div class="round-number">Bonus 01 🧮 <span class="round-status status-bonus">✓ Bonus</span></div>
+            <h2 class="round-title">선형대수 올인원 (Linear Algebra All-in-One)</h2>
+            <p class="round-desc">벡터·행렬·내적·역행렬·고유값·SVD·PCA — 머신러닝의 수학적 기반을 한 권으로.</p>
+            <div class="round-topics">
+                <span class="topic-tag">Vector</span>
+                <span class="topic-tag">Matrix</span>
+                <span class="topic-tag">Eigenvalue</span>
+                <span class="topic-tag">SVD</span>
+                <span class="topic-tag">PCA</span>
+            </div>
+        </a>
+
         <a href="/guide/round-02/" class="round-card completed">
             <div class="round-number">Round 02 <span class="round-status status-done">✓ Complete</span></div>
             <h2 class="round-title">Linear Algebra + Statistics for Finance</h2>
@@ -119,6 +137,19 @@ body{font-family:'Inter',sans-serif;background:#fafaf8;color:#1a1a1a;line-height
                 <span class="topic-tag">Statistics</span>
                 <span class="topic-tag">Covariance</span>
                 <span class="topic-tag">Hypothesis Testing</span>
+            </div>
+        </a>
+
+        <a href="/guide/bonus-02/" class="round-card bonus completed">
+            <div class="round-number">Bonus 02 📐 <span class="round-status status-bonus">✓ Bonus</span></div>
+            <h2 class="round-title">미적분 올인원 (Calculus All-in-One)</h2>
+            <p class="round-desc">극한·미분·적분·편미분·그래디언트·체인룰 — 최적화와 역전파의 수학적 엔진.</p>
+            <div class="round-topics">
+                <span class="topic-tag">Limits</span>
+                <span class="topic-tag">Derivatives</span>
+                <span class="topic-tag">Gradient</span>
+                <span class="topic-tag">Chain Rule</span>
+                <span class="topic-tag">Integration</span>
             </div>
         </a>
 
@@ -134,6 +165,19 @@ body{font-family:'Inter',sans-serif;background:#fafaf8;color:#1a1a1a;line-height
             </div>
         </a>
 
+        <a href="/guide/bonus-04/" class="round-card bonus completed">
+            <div class="round-number">Bonus 04 💰 <span class="round-status status-bonus">✓ Bonus</span></div>
+            <h2 class="round-title">재무관리 올인원 (Financial Management All-in-One)</h2>
+            <p class="round-desc">화폐의 시간가치·DCF·포트폴리오 이론·CAPM·팩터 모델·성과 평가 — 퀀트 필수 재무관리.</p>
+            <div class="round-topics">
+                <span class="topic-tag">TVM</span>
+                <span class="topic-tag">DCF</span>
+                <span class="topic-tag">CAPM</span>
+                <span class="topic-tag">Fama-French</span>
+                <span class="topic-tag">Sharpe Ratio</span>
+            </div>
+        </a>
+
         <a href="/guide/round-04/" class="round-card completed">
             <div class="round-number">Round 04 <span class="round-status status-done">✓ Complete</span></div>
             <h2 class="round-title">Supervised Learning for Finance</h2>
@@ -146,8 +190,21 @@ body{font-family:'Inter',sans-serif;background:#fafaf8;color:#1a1a1a;line-height
             </div>
         </a>
 
-        <a href="/guide/round-05/" class="round-card done">
-            <div class="round-number">Round 05 <span class="round-status status-done">✓ Done</span></div>
+        <a href="/guide/bonus-03/" class="round-card bonus completed">
+            <div class="round-number">Bonus 03 🎲 <span class="round-status status-bonus">✓ Bonus</span></div>
+            <h2 class="round-title">확률·통계 올인원 (Probability & Statistics All-in-One)</h2>
+            <p class="round-desc">확률공간·분포·베이즈·추정·검정·회귀 — 데이터 사이언스의 통계적 기반 완전 정복.</p>
+            <div class="round-topics">
+                <span class="topic-tag">Probability</span>
+                <span class="topic-tag">Distributions</span>
+                <span class="topic-tag">Bayes</span>
+                <span class="topic-tag">Estimation</span>
+                <span class="topic-tag">Regression</span>
+            </div>
+        </a>
+
+        <a href="/guide/round-05/" class="round-card completed">
+            <div class="round-number">Round 05 <span class="round-status status-done">✓ Complete</span></div>
             <h2 class="round-title">Unsupervised Learning + Time Series</h2>
             <p class="round-desc">PCA, t-SNE, K-Means, DBSCAN 클러스터링과 ARIMA, GARCH 시계열 모델링.</p>
             <div class="round-topics">
@@ -158,8 +215,21 @@ body{font-family:'Inter',sans-serif;background:#fafaf8;color:#1a1a1a;line-height
             </div>
         </a>
 
-        <a href="/guide/round-06/" class="round-card done">
-            <div class="round-number">Round 06 <span class="round-status status-done">✓ Done</span></div>
+        <a href="/guide/bonus-05/" class="round-card bonus completed">
+            <div class="round-number">Bonus 05 ⚗️ <span class="round-status status-bonus">✓ Bonus</span></div>
+            <h2 class="round-title">금융공학 올인원 (Financial Engineering All-in-One)</h2>
+            <p class="round-desc">브라운 운동·이토 보조정리·블랙-숄즈·그릭스·몬테카를로·VaR·GARCH·금리 모델.</p>
+            <div class="round-topics">
+                <span class="topic-tag">Black-Scholes</span>
+                <span class="topic-tag">Greeks</span>
+                <span class="topic-tag">Monte Carlo</span>
+                <span class="topic-tag">VaR</span>
+                <span class="topic-tag">GARCH</span>
+            </div>
+        </a>
+
+        <a href="/guide/round-06/" class="round-card completed">
+            <div class="round-number">Round 06 <span class="round-status status-done">✓ Complete</span></div>
             <h2 class="round-title">NLP + Sentiment Analysis</h2>
             <p class="round-desc">토큰화, TF-IDF, Word2Vec, LDA 토픽 모델링, Transformer/BERT, FinBERT 금융 감성분석.</p>
             <div class="round-topics">
@@ -171,8 +241,8 @@ body{font-family:'Inter',sans-serif;background:#fafaf8;color:#1a1a1a;line-height
             </div>
         </a>
 
-        <a href="round-07/" class="round-card completed" style="text-decoration:none;color:inherit">
-            <div class="round-number">Round 07 <span class="round-status status-done">✓ Done</span></div>
+        <a href="/guide/round-07/" class="round-card completed">
+            <div class="round-number">Round 07 <span class="round-status status-done">✓ Complete</span></div>
             <h2 class="round-title">Deep Learning (ANN, CNN, RNN, LSTM)</h2>
             <p class="round-desc">퍼셉트론, 역전파, CNN 이미지 패턴 인식, RNN/LSTM 시계열 예측, PyTorch 기초.</p>
             <div class="round-topics">
@@ -183,8 +253,21 @@ body{font-family:'Inter',sans-serif;background:#fafaf8;color:#1a1a1a;line-height
             </div>
         </a>
 
-        <a href="round-08/" class="round-card current" style="text-decoration:none;color:inherit">
-            <div class="round-number">Round 08 <span class="round-status status-current">● Current</span></div>
+        <a href="/guide/bonus-06/" class="round-card bonus completed">
+            <div class="round-number">Bonus 06 🎯 <span class="round-status status-bonus">✓ Bonus</span></div>
+            <h2 class="round-title">최적화 이론 올인원 (Optimization Theory All-in-One)</h2>
+            <p class="round-desc">볼록 최적화·라그랑주·KKT·QP·경사하강법·Adam·정규화·Risk Parity·Black-Litterman.</p>
+            <div class="round-topics">
+                <span class="topic-tag">Convex</span>
+                <span class="topic-tag">KKT</span>
+                <span class="topic-tag">Gradient Descent</span>
+                <span class="topic-tag">Adam</span>
+                <span class="topic-tag">Portfolio</span>
+            </div>
+        </a>
+
+        <a href="/guide/round-08/" class="round-card completed">
+            <div class="round-number">Round 08 <span class="round-status status-done">✓ Complete</span></div>
             <h2 class="round-title">Convex Optimization + Portfolio Optimization + Transformer</h2>
             <p class="round-desc">볼록 최적화 이론, CVXPY, Mean-Variance, Black-Litterman, Risk Parity, HRP, Kelly Criterion, Transformer Self-Attention, 금융 시계열 예측.</p>
             <div class="round-topics">
@@ -196,8 +279,8 @@ body{font-family:'Inter',sans-serif;background:#fafaf8;color:#1a1a1a;line-height
             </div>
         </a>
 
-        <div class="round-card locked">
-            <div class="round-number">Round 09 <span class="round-status status-locked">Locked</span></div>
+        <a href="/guide/round-09/" class="round-card completed">
+            <div class="round-number">Round 09 <span class="round-status status-done">✓ Complete</span></div>
             <h2 class="round-title">HFT System Architecture + Reinforcement Learning</h2>
             <p class="round-desc">시장 마이크로스트럭처, 오더북, HFT 전략, Q-Learning, DQN, PPO 트레이딩 에이전트.</p>
             <div class="round-topics">
@@ -205,30 +288,32 @@ body{font-family:'Inter',sans-serif;background:#fafaf8;color:#1a1a1a;line-height
                 <span class="topic-tag">Microstructure</span>
                 <span class="topic-tag">RL</span>
                 <span class="topic-tag">DQN</span>
+                <span class="topic-tag">PPO</span>
             </div>
-        </div>
+        </a>
 
-        <div class="round-card locked">
-            <div class="round-number">Round 10 <span class="round-status status-locked">Locked</span></div>
+        <a href="/guide/round-10/" class="round-card completed">
+            <div class="round-number">Round 10 <span class="round-status status-done">✓ Complete</span></div>
             <h2 class="round-title">Integration: Full HFT Pipeline</h2>
             <p class="round-desc">전체 파이프라인 통합, 백테스팅 프레임워크, 리스크 관리, 실전 배포.</p>
             <div class="round-topics">
                 <span class="topic-tag">Backtesting</span>
                 <span class="topic-tag">Risk Management</span>
                 <span class="topic-tag">Deployment</span>
+                <span class="topic-tag">Final Project</span>
             </div>
-        </div>
+        </a>
     </div>
 
     <div class="curriculum-info">
         <h3 class="curriculum-title">Curriculum Overview</h3>
         <div class="curriculum-grid">
             <div class="curriculum-item"><span class="label">Level</span> Python 초급 → HFT 시스템</div>
-            <div class="curriculum-item"><span class="label">Rounds</span> 10 Rounds (현재 8/10)</div>
+            <div class="curriculum-item"><span class="label">Rounds</span> 10 Rounds + 6 Bonus</div>
             <div class="curriculum-item"><span class="label">Focus</span> Convex Optimization + DL</div>
             <div class="curriculum-item"><span class="label">Style</span> 올인원 자기완결형 강의</div>
-            <div class="curriculum-item"><span class="label">Math</span> MathJax 수식 포함</div>
-            <div class="curriculum-item"><span class="label">Code</span> Python 실습 코드 내장</div>
+            <div class="curriculum-item"><span class="label">Bonus</span> 선형대수·미적분·확률통계·재무관리·금융공학·최적화</div>
+            <div class="curriculum-item"><span class="label">Code</span> Python 실습 + Plotly 시각화</div>
         </div>
     </div>
 </div>
