Guide index: add 2-week curriculum overview at top

--- a/guide/index.html
+++ b/guide/index.html
@@ -102,6 +102,50 @@ body{font-family:'Inter',sans-serif;background:#fafaf8;color:#1a1a1a;line-height
         <span class="progress-text">16 / 16 Complete</span>
     </div>
 
+    <!-- ═══════════════════════════════════════════ -->
+    <!-- 2주 완성 커리큘럼 -->
+    <!-- ═══════════════════════════════════════════ -->
+    <div style="margin-bottom:50px;padding:32px;background:linear-gradient(135deg,#f8f9fa,#e8eaf6);border-radius:16px;border:1px solid #c5cae9;opacity:0" class="curriculum-2week">
+        <p style="text-align:center;font-weight:600;margin-bottom:6px;font-size:1.15rem;color:#283593;font-family:'Cormorant Garamond',serif;letter-spacing:.02em">📅 2주 완성 커리큘럼</p>
+        <p style="text-align:center;font-size:.78rem;color:#5c6bc0;margin-bottom:24px;letter-spacing:.04em">매일 3~4시간 · 이론 → 코드 → 문제 풀이 사이클 · 보너스 라운드는 필요 시 참조</p>
+
+        <div style="display:grid;grid-template-columns:1fr 1fr;gap:18px">
+            <!-- Week 1 -->
+            <div style="background:#fff;padding:22px;border-radius:12px;box-shadow:0 2px 12px rgba(0,0,0,.06);border-top:4px solid #1565c0">
+                <p style="font-weight:600;color:#1565c0;font-size:.85rem;margin-bottom:14px;text-indent:0">🔬 Week 1 — 기초 & 전통 ML</p>
+                <table style="font-size:.72rem;margin:0;width:100%;border:none">
+                    <tr><th style="background:#1565c0;padding:6px 8px;font-size:.62rem;border:none">Day</th><th style="background:#1565c0;padding:6px 8px;font-size:.62rem;border:none">학습 내용</th><th style="background:#1565c0;padding:6px 8px;font-size:.62rem;border:none">핵심 활동</th></tr>
+                    <tr><td style="border:1px solid #e8e8e8;padding:5px 6px">1</td><td style="border:1px solid #e8e8e8;padding:5px 6px;text-align:left">R1. Python + Finance</td><td style="border:1px solid #e8e8e8;padding:5px 6px;text-align:left">yfinance 수집, 수익률 계산, 시각화</td></tr>
+                    <tr><td style="border:1px solid #e8e8e8;padding:5px 6px">2</td><td style="border:1px solid #e8e8e8;padding:5px 6px;text-align:left">R2. LinAlg + Stats</td><td style="border:1px solid #e8e8e8;padding:5px 6px;text-align:left">공분산 행렬, 가설검정, NumPy 실습</td></tr>
+                    <tr><td style="border:1px solid #e8e8e8;padding:5px 6px">3</td><td style="border:1px solid #e8e8e8;padding:5px 6px;text-align:left">R3. Data / Feature Eng.</td><td style="border:1px solid #e8e8e8;padding:5px 6px;text-align:left">기술적 지표 생성, 파이프라인 구축</td></tr>
+                    <tr><td style="border:1px solid #e8e8e8;padding:5px 6px">4</td><td style="border:1px solid #e8e8e8;padding:5px 6px;text-align:left">R4. Supervised ML</td><td style="border:1px solid #e8e8e8;padding:5px 6px;text-align:left">XGBoost, 교차검증, 하이퍼파라미터</td></tr>
+                    <tr><td style="border:1px solid #e8e8e8;padding:5px 6px">5</td><td style="border:1px solid #e8e8e8;padding:5px 6px;text-align:left">R5. Unsupervised + TS</td><td style="border:1px solid #e8e8e8;padding:5px 6px;text-align:left">PCA, 클러스터링, ARIMA, GARCH</td></tr>
+                    <tr><td style="border:1px solid #e8e8e8;padding:5px 6px">6</td><td style="border:1px solid #e8e8e8;padding:5px 6px;text-align:left">R6. NLP + Sentiment</td><td style="border:1px solid #e8e8e8;padding:5px 6px;text-align:left">TF-IDF, Word2Vec, FinBERT 감성분석</td></tr>
+                    <tr><td style="border:1px solid #e8e8e8;padding:5px 6px">7</td><td style="border:1px solid #e8e8e8;padding:5px 6px;text-align:left">🧘 복습 + 보너스</td><td style="border:1px solid #e8e8e8;padding:5px 6px;text-align:left">B1~B4 필요한 부분 참조, 연습문제</td></tr>
+                </table>
+            </div>
+
+            <!-- Week 2 -->
+            <div style="background:#fff;padding:22px;border-radius:12px;box-shadow:0 2px 12px rgba(0,0,0,.06);border-top:4px solid #e040fb">
+                <p style="font-weight:600;color:#9c27b0;font-size:.85rem;margin-bottom:14px;text-indent:0">🚀 Week 2 — 딥러닝 & HFT</p>
+                <table style="font-size:.72rem;margin:0;width:100%;border:none">
+                    <tr><th style="background:#9c27b0;padding:6px 8px;font-size:.62rem;border:none">Day</th><th style="background:#9c27b0;padding:6px 8px;font-size:.62rem;border:none">학습 내용</th><th style="background:#9c27b0;padding:6px 8px;font-size:.62rem;border:none">핵심 활동</th></tr>
+                    <tr><td style="border:1px solid #e8e8e8;padding:5px 6px">8</td><td style="border:1px solid #e8e8e8;padding:5px 6px;text-align:left">R7. Deep Learning</td><td style="border:1px solid #e8e8e8;padding:5px 6px;text-align:left">PyTorch, CNN, LSTM 시계열 예측</td></tr>
+                    <tr><td style="border:1px solid #e8e8e8;padding:5px 6px">9</td><td style="border:1px solid #e8e8e8;padding:5px 6px;text-align:left">R8. Convex Opt + Transformer</td><td style="border:1px solid #e8e8e8;padding:5px 6px;text-align:left">CVXPY, 포트폴리오 최적화, Attention</td></tr>
+                    <tr><td style="border:1px solid #e8e8e8;padding:5px 6px">10</td><td style="border:1px solid #e8e8e8;padding:5px 6px;text-align:left">R8 심화 + B5·B6</td><td style="border:1px solid #e8e8e8;padding:5px 6px;text-align:left">Risk Parity, Black-Litterman, KKT</td></tr>
+                    <tr><td style="border:1px solid #e8e8e8;padding:5px 6px">11</td><td style="border:1px solid #e8e8e8;padding:5px 6px;text-align:left">R9. HFT + RL</td><td style="border:1px solid #e8e8e8;padding:5px 6px;text-align:left">오더북, 마이크로스트럭처, DQN, PPO</td></tr>
+                    <tr><td style="border:1px solid #e8e8e8;padding:5px 6px">12</td><td style="border:1px solid #e8e8e8;padding:5px 6px;text-align:left">R10. Final Project</td><td style="border:1px solid #e8e8e8;padding:5px 6px;text-align:left">전체 파이프라인 통합, 백테스팅</td></tr>
+                    <tr><td style="border:1px solid #e8e8e8;padding:5px 6px">13</td><td style="border:1px solid #e8e8e8;padding:5px 6px;text-align:left">프로젝트 마무리</td><td style="border:1px solid #e8e8e8;padding:5px 6px;text-align:left">리스크 관리, 성과 분석, 리포트</td></tr>
+                    <tr><td style="border:1px solid #e8e8e8;padding:5px 6px">14</td><td style="border:1px solid #e8e8e8;padding:5px 6px;text-align:left">🎯 전체 복습</td><td style="border:1px solid #e8e8e8;padding:5px 6px;text-align:left">Cheat Sheet 정리, 약점 보강</td></tr>
+                </table>
+            </div>
+        </div>
+
+        <div style="margin-top:16px;padding:12px 16px;background:rgba(255,255,255,.8);border-radius:8px;border:1px dashed #9fa8da">
+            <p style="font-size:.75rem;color:#37474f;text-indent:0;margin:0">💡 <strong>보너스 라운드(B1~B6)</strong>는 수학·금융 기초가 부족할 때 해당 라운드 전에 참조하는 올인원 교재입니다. 선형대수가 약하면 R2 전에 B1을, 최적화가 약하면 R8 전에 B6을 먼저 보세요. 각 보너스에는 자체 2주 커리큘럼이 포함되어 있습니다.</p>
+        </div>
+    </div>
+
     <div class="round-list">
         <a href="/guide/round-01/" class="round-card completed">
             <div class="round-number">Round 01 <span class="round-status status-done">✓ Complete</span></div>
@@ -324,8 +368,9 @@ gsap.to('.page-title',{opacity:1,y:0,duration:.6,delay:.2});
 gsap.to('.page-subtitle',{opacity:1,duration:.5,delay:.35});
 gsap.to('.page-desc',{opacity:1,duration:.5,delay:.45});
 gsap.to('.progress-overview',{opacity:1,duration:.5,delay:.55});
-gsap.to('.round-card',{opacity:1,y:0,duration:.5,delay:.6,stagger:.08});
-gsap.to('.curriculum-info',{opacity:1,duration:.5,delay:1.2});
+gsap.to('.curriculum-2week',{opacity:1,duration:.6,delay:.65});
+gsap.to('.round-card',{opacity:1,y:0,duration:.5,delay:.85,stagger:.06});
+gsap.to('.curriculum-info',{opacity:1,duration:.5,delay:2});
 gsap.set('.page-title',{y:15});
 gsap.set('.round-card',{y:20});
 </script>
