B6: move 2-week curriculum to very top (before abstract)

--- a/guide/bonus-06/index.html
+++ b/guide/bonus-06/index.html
@@ -159,22 +159,8 @@ pre{font-size:11px;padding:14px}table{font-size:10px;display:block;overflow-x:au
 <div class="progress-label">Bonus Round — 최적화 이론 완전 정복</div>
 </div>
 
-<div class="abstract">
-<div class="abstract-title">왜 최적화 이론인가?</div>
-<p class="ni">머신러닝은 곧 최적화다. 선형회귀의 OLS, 로지스틱 회귀의 MLE, 신경망의 역전파 — 모두 "손실함수를 최소화하는 파라미터를 찾는" 최적화 문제이다. HFT에서는 밀리초 단위로 포트폴리오 가중치를 조정하고, 주문 실행 비용을 최소화하며, 리스크 한도 내에서 수익을 극대화해야 한다. 이 강의를 마치면:</p>
-<ul>
-<li>볼록 함수와 비볼록 함수의 차이를 설명하고, 왜 볼록성이 중요한지 이해한다</li>
-<li>라그랑주 승수법과 KKT 조건으로 제약 최적화 문제를 풀 수 있다</li>
-<li>Markowitz 평균-분산 최적화를 QP로 정식화하고 Python으로 구현할 수 있다</li>
-<li>GD, SGD, Adam 등 경사하강법 변형의 원리와 수렴 속도를 비교할 수 있다</li>
-<li>L1/L2 정규화의 기하학적 의미와 근위 경사법을 이해한다</li>
-<li>Risk Parity, Black-Litterman, 거래비용 최적화를 구현할 수 있다</li>
-</ul>
-<div style="font-size:13px;color:#555;margin-top:15px;font-style:italic"><strong>Keywords:</strong> Convex Optimization, Gradient Descent, KKT, QP, Lagrange, Adam, SGD, Markowitz, Risk Parity, Black-Litterman, Regularization</div>
-</div>
-
 <!-- ═══════════════════════════════════════════════════════════════ -->
-<!-- 2주 커리큘럼 학습방법론 -->
+<!-- 2주 커리큘럼 학습방법론 (맨 앞) -->
 <!-- ═══════════════════════════════════════════════════════════════ -->
 <div style="margin:30px 0;padding:28px;background:linear-gradient(135deg,#f3e5f5,#ede7f6);border-radius:12px;border:1px solid #ce93d8">
 <p class="ni" style="text-align:center;font-weight:bold;margin-bottom:20px;font-size:16px;color:#6a1b9a">📅 2주 완성 커리큘럼 — 학습 방법론</p>
@@ -217,6 +203,20 @@ pre{font-size:11px;padding:14px}table{font-size:10px;display:block;overflow-x:au
 <div style="margin-top:18px;padding:14px;background:rgba(255,255,255,.7);border-radius:8px;border:1px dashed #ab47bc">
 <p class="ni" style="font-size:12px;color:#6a1b9a"><strong>💡 학습 팁:</strong> 최적화는 "손으로 풀기 → 코드로 검증 → 시각화로 직관 잡기"의 순서가 가장 효과적이다. 특히 Ch 4~5의 라그랑주/KKT는 반드시 수식을 직접 전개해 본 뒤 scipy로 답을 확인하라. Ch 7의 경사하강법은 학습률을 바꿔가며 수렴 과정을 눈으로 확인하는 것이 핵심이다. Week 2의 금융 응용은 실제 주가 데이터로 실습하면 체감이 완전히 달라진다.</p>
 </div>
+</div>
+
+<div class="abstract">
+<div class="abstract-title">왜 최적화 이론인가?</div>
+<p class="ni">머신러닝은 곧 최적화다. 선형회귀의 OLS, 로지스틱 회귀의 MLE, 신경망의 역전파 — 모두 "손실함수를 최소화하는 파라미터를 찾는" 최적화 문제이다. HFT에서는 밀리초 단위로 포트폴리오 가중치를 조정하고, 주문 실행 비용을 최소화하며, 리스크 한도 내에서 수익을 극대화해야 한다. 이 강의를 마치면:</p>
+<ul>
+<li>볼록 함수와 비볼록 함수의 차이를 설명하고, 왜 볼록성이 중요한지 이해한다</li>
+<li>라그랑주 승수법과 KKT 조건으로 제약 최적화 문제를 풀 수 있다</li>
+<li>Markowitz 평균-분산 최적화를 QP로 정식화하고 Python으로 구현할 수 있다</li>
+<li>GD, SGD, Adam 등 경사하강법 변형의 원리와 수렴 속도를 비교할 수 있다</li>
+<li>L1/L2 정규화의 기하학적 의미와 근위 경사법을 이해한다</li>
+<li>Risk Parity, Black-Litterman, 거래비용 최적화를 구현할 수 있다</li>
+</ul>
+<div style="font-size:13px;color:#555;margin-top:15px;font-style:italic"><strong>Keywords:</strong> Convex Optimization, Gradient Descent, KKT, QP, Lagrange, Adam, SGD, Markowitz, Risk Parity, Black-Litterman, Regularization</div>
 </div>
 
 <p class="ni"><strong>목차:</strong></p>
