--- a/guide/bonus-05/index.html
+++ b/guide/bonus-05/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ko">
 <head>
 <meta charset="UTF-8">
@@ -109,21 +109,21 @@ pre{font-size:11px;padding:14px}table{font-size:10px;display:block;overflow-x:au
 <div class="nav-section-title">Curriculum</div>
 <ul class="nav-list">
 <li><a class="done" href="../round-01/">R1. Python + Finance <span class="badge badge-done">DONE</span></a></li>
-<li><a class="done" href="../bonus-01/">B1. 선형대수 <span class="badge badge-done">DONE</span></a></li>
-<li><a class="done" href="../round-02/">R2. LinAlg + Stats <span class="badge badge-done">DONE</span></a></li>
-<li><a class="done" href="../bonus-02/">B2. 미적분 <span class="badge badge-done">DONE</span></a></li>
-<li><a class="done" href="../round-03/">R3. Data / Feature <span class="badge badge-done">DONE</span></a></li>
-<li><a class="done" href="../bonus-04/">B4. 재무관리 <span class="badge badge-done">DONE</span></a></li>
-<li><a class="done" href="../round-04/">R4. Supervised ML <span class="badge badge-done">DONE</span></a></li>
-<li><a class="done" href="../bonus-03/">B3. 확률·통계 <span class="badge badge-done">DONE</span></a></li>
-<li><a class="done" href="../round-05/">R5. Unsupervised+TS <span class="badge badge-done">DONE</span></a></li>
+<li><a class="done" href="../bonus-01/">B1. 선형대수 올인원 <span class="badge badge-done">DONE</span></a></li>
+<li><a class="done" href="../round-02/">R2. Linear Algebra + Stats <span class="badge badge-done">DONE</span></a></li>
+<li><a class="done" href="../bonus-02/">B2. 미적분 올인원 <span class="badge badge-done">DONE</span></a></li>
+<li><a class="done" href="../round-03/">R3. Data / Feature Eng. <span class="badge badge-done">DONE</span></a></li>
+<li><a class="done" href="../bonus-04/">B4. 재무관리 올인원 <span class="badge badge-done">DONE</span></a></li>
+<li><a class="done" href="../round-04/">R4. Supervised Learning <span class="badge badge-done">DONE</span></a></li>
+<li><a class="done" href="../bonus-03/">B3. 확률통계 올인원 <span class="badge badge-done">DONE</span></a></li>
+<li><a class="done" href="../round-05/">R5. Unsupervised + TS <span class="badge badge-done">DONE</span></a></li>
 <li><a class="active" href="#">B5. 금융공학 올인원 <span class="badge badge-bonus">BONUS</span></a></li>
-<li><a href="../round-06/">R6. NLP + Sentiment</a></li>
-<li><a href="../round-07/">R7. Deep Learning</a></li>
-<li><a href="../bonus-06/">B6. 최적화 이론</a></li>
-<li><a href="../round-08/">R8. Convex Opt + Transformer</a></li>
-<li><a href="../round-09/">R9. HFT + RL</a></li>
-<li><a href="../round-10/">R10. Final Project</a></li>
+<li><a class="done" href="../round-06/">R6. NLP + Sentiment <span class="badge badge-done">DONE</span></a></li>
+<li><a class="done" href="../round-07/">R7. Deep Learning <span class="badge badge-done">DONE</span></a></li>
+<li><a class="done" href="../bonus-06/">B6. 최적화 이론 올인원 <span class="badge badge-done">DONE</span></a></li>
+<li><a class="done" href="../round-08/">R8. Convex Opt + Transformer <span class="badge badge-done">DONE</span></a></li>
+<li><a class="done" href="../round-09/">R9. HFT + RL <span class="badge badge-done">DONE</span></a></li>
+<li><a class="done" href="../round-10/">R10. Final Project <span class="badge badge-done">DONE</span></a></li>
 </ul>
 </div>
 <div class="nav-section">
