--- a/research/wq-alpha-evolution/index.html
+++ b/research/wq-alpha-evolution/index.html
@@ -531,6 +531,77 @@ title: "WQ BRAIN Alpha Evolution"
 
 <div class="section-divider">• • •</div>
 
+<!-- 10. v4 Extensions -->
+<h2>10. v4 확장 모듈</h2>
+
+<p>v3까지의 핵심 진화 엔진 위에 4개의 보조 모듈을 추가하여 탐색 효율과 수렴 속도를 개선하였다. 각 모듈은 독립적으로 동작하며, 기존 파이프라인에 비침습적으로 통합된다.</p>
+
+<h3>10.1 패턴 학습기 (Pattern Learner)</h3>
+
+<p>Hall of Fame에 축적된 성공 알파들의 공통 구조를 통계적으로 추출하여 초기 population 생성 시 seed 품질을 향상시킨다. 수식에서 데이터 필드, 연산자, 시계열 윈도우 크기의 빈도를 가중 집계하며, 가중치는 IQC 점수에 비례한다.</p>
+
+<p class="no-indent">학습된 패턴으로부터 트리를 생성할 때, 70%는 빈출 패턴 기반, 30%는 완전 랜덤으로 구성하여 exploitation-exploration 균형을 유지한다. 생성된 "학습 시드"는 전체 population의 15%를 차지하며, 라운드 종료 시마다 해당 라운드에서 발견된 신규 알파로 학습 데이터를 갱신한다.</p>
+
+<div class="math-block">
+\[
+w_f = \sum_{i \in \text{HoF}} \text{count}(f, \alpha_i) \cdot \lfloor \text{IQC}_i \rfloor, \quad P(\text{field} = f) \propto w_f
+\]
+</div>
+
+<h3>10.2 Surrogate Model (대리 모델)</h3>
+
+<p>BRAIN API 시뮬레이션 호출이 병목이므로, 수식의 구조적 특징으로부터 Sharpe ratio를 예측하는 경량 회귀 모델을 학습한다. 특징 벡터는 20차원으로 구성된다: 수식 길이, 괄호 깊이, 시계열/랭킹/그룹 연산자 빈도, 산술 연산자 빈도, 윈도우 크기 통계(평균/최대/최소), 필드 다양성, 멀티라인 여부, 특정 패턴 존재 여부(ts_decay_linear, ts_zscore, ts_corr, group_neutralize, ts_regression).</p>
+
+<p class="no-indent">XGBoost가 설치되어 있으면 자동으로 사용하고, 없으면 Ridge Regression으로 폴백한다. 30개 이상의 학습 샘플이 축적되면 모델이 활성화되며, 이후 평가 대상 population에서 상위 60%만 실제 API 호출로 평가한다. 하위 40% 중에서도 10%를 랜덤으로 포함하여 surrogate의 편향을 완화한다.</p>
+
+<div class="math-block">
+\[
+\hat{S}(\alpha) = f_\theta(\mathbf{x}_\alpha), \quad \mathbf{x}_\alpha \in \mathbb{R}^{20}
+\]
+</div>
+
+<p class="no-indent">Ridge Regression의 경우:</p>
+
+<div class="math-block">
+\[
+\hat{\mathbf{w}} = (\mathbf{X}^\top \mathbf{X} + \lambda \mathbf{I})^{-1} \mathbf{X}^\top \mathbf{y}, \quad \lambda = 1.0
+\]
+</div>
+
+<h3>10.3 데이터필드 자동 탐색기 (Field Explorer)</h3>
+
+<p>BRAIN 플랫폼은 수백 개의 데이터 필드를 제공하지만, 수동 탐색으로는 전체를 커버하기 어렵다. Field Explorer는 <code>datafields_usa.csv</code>에서 전체 필드 목록을 로드하고, 현재 alpha_ast에서 사용 중인 필드 집합과 비교하여 미사용 필드를 자동으로 발견한다.</p>
+
+<p class="no-indent">각 미사용 필드에 대해 8가지 간단한 테스트 수식(rank, zscore, decay_linear, av_diff 등)을 생성하여 빠르게 스크리닝한다. Sharpe > 0.3인 필드는 "유망 필드 풀"에 추가되어 이후 진화 과정에서 활용된다. Sharpe ≤ -0.5인 필드는 실패 목록에 등록되어 재테스트를 방지한다.</p>
+
+<h3>10.4 MDL 복잡도 제어</h3>
+
+<p>Minimum Description Length (MDL) 원리에 기반한 복잡도 페널티를 IQC 점수 계산에 통합하였다. 수식의 정보량을 연산자 수(5 bits/op), 필드 수(7 bits/field), 윈도우 파라미터 수(4 bits/param), 멀티라인 변수 수(10 bits/var)로 추정한다.</p>
+
+<div class="math-block">
+\[
+L(H) = 5 \cdot n_{\text{ops}} + 7 \cdot n_{\text{fields}} + 4 \cdot n_{\text{params}} + 10 \cdot n_{\text{vars}}
+\]
+</div>
+
+<div class="math-block">
+\[
+\text{penalty} = \min\left(0.25, \; \frac{\max(0, \; L(H) - 80)}{400}\right)
+\]
+</div>
+
+<p class="no-indent">80 bits 이하의 수식에는 페널티가 없으며, 이후 선형적으로 증가하여 최대 25%의 점수 감소를 적용한다. 이는 기존의 노드 수 기반 시그모이드 페널티와 곱셈적으로 결합되어, 과적합 위험이 높은 과도하게 복잡한 수식을 억제한다.</p>
+
+<h3>10.5 실시간 대시보드</h3>
+
+<p>진행 상황 모니터링을 위한 웹 기반 대시보드를 제공한다. <code>--dashboard</code> 옵션으로 진화 엔진과 동시에 실행되며, 30초 간격으로 자동 갱신된다. 표시 항목: Hall of Fame 크기, 제출 수, 최고 IQC 점수, MAP-Elites 커버리지, 연산자별 AOS 보상, 라운드 히스토리, 상위 20개 알파 상세 정보.</p>
+
+<h3>10.6 멀티 리전 교차 수분 (Cross-Pollination)</h3>
+
+<p>v3의 멀티 리전 라운드(R5)를 강화하였다. 기존의 단순 리전별 테스트에 더해, 서로 다른 리전에서 높은 점수를 받은 알파들 간의 교배(crossover)를 수행한다. 이는 리전 간 공통 구조를 발견하고, 특정 리전에 과적합된 수식의 일반화 가능성을 탐색하는 효과가 있다.</p>
+
+<div class="section-divider">• • •</div>
+
 <!-- References -->
 <h2>References</h2>
 
@@ -544,6 +615,8 @@ title: "WQ BRAIN Alpha Evolution"
 <p>Storn, R. & Price, K. (1997). Differential Evolution. <em>J. Global Optimization</em>, 11(4), pp. 341–359.</p>
 <p>Ursem, R. K. (2000). Multinational GAs: Multimodal Optimization in Dynamic Environments. <em>GECCO</em>, pp. 19–26.</p>
 <p>WorldQuant BRAIN Platform. <em>FastExpression Language Reference</em>. <a href="https://platform.worldquantbrain.com" target="_blank">platform.worldquantbrain.com</a></p>
+<p>Rissanen, J. (1978). Modeling by shortest data description. <em>Automatica</em>, 14(5), pp. 465–471.</p>
+<p>Jin, Y. (2011). Surrogate-assisted evolutionary computation: Recent advances and future challenges. <em>Swarm and Evolutionary Computation</em>, 1(2), pp. 61–70.</p>
 </div>
 
 </div><!-- /.paper-content -->
