--- a/research/wq-alpha-evolution/index.html
+++ b/research/wq-alpha-evolution/index.html
@@ -165,7 +165,7 @@ title: "WQ BRAIN Alpha Evolution"
 
 <div class="abstract">
     <div class="abstract-title">Abstract</div>
-    본 논문은 WorldQuant BRAIN 플랫폼의 International Quant Championship(IQC) 및 컨설턴트 프로그램을 위한 완전 자동 알파 탐색 시스템의 설계와 구현을 기술한다. 시스템은 7라운드 진화 전략을 통해 FastExpression 및 Regular Expression 기반 알파 수식을 자동 생성·시뮬레이션·제출하며, Island Model(4섬, Ring Topology 이주), ε-Lexicase Selection, SHADE 적응형 DE 파라미터 제어(H=15, Lehmer Mean), MAP-Elites 품질-다양성 아카이브(10×5 그리드), UCB1 기반 적응형 연산자 선택(10개 연산자) 등 최신 진화 연산 기법을 통합한다. 영속적 체크포인트 시스템을 도입하여 크래시 복구 및 누적 진화를 지원하고, 멀티라인 Regular Expression, 확장 데이터셋, 36개 복합 전략 시드, Self-Correlation 회피 전략 등을 포함한다.
+    본 글은 WorldQuant BRAIN 플랫폼의 International Quant Championship(IQC) 및 컨설턴트 프로그램을 위한 완전 자동 알파 탐색 시스템의 설계와 구현을 기술한다. 시스템은 7라운드 진화 전략을 통해 FastExpression 및 Regular Expression 기반 알파 수식을 자동 생성·시뮬레이션·제출하며, Island Model(4섬, Ring Topology 이주), ε-Lexicase Selection, SHADE 적응형 DE 파라미터 제어(H=15, Lehmer Mean), MAP-Elites 품질-다양성 아카이브(10×5 그리드), UCB1 기반 적응형 연산자 선택(10개 연산자) 등 최신 진화 연산 기법을 통합한다. 영속적 체크포인트 시스템을 도입하여 크래시 복구 및 누적 진화를 지원하고, 멀티라인 Regular Expression, 확장 데이터셋, 36개 복합 전략 시드, Self-Correlation 회피 전략 등을 포함한다.
 </div>
 
 <div class="keywords">
@@ -492,18 +492,78 @@ title: "WQ BRAIN Alpha Evolution"
 <div class="section-divider">• • •</div>
 
 <!-- 8. Persistence -->
-<h2>8. 영속성 및 체크포인트</h2>
+<h2>8. 영속성 및 상태 복원</h2>
 
-<p>프로그램 시작 시 <code>results/</code> 디렉토리의 모든 파일을 스캔하여 명예의 전당, MAP-Elites, 파레토 아카이브, 제출 기록, AOS 통계를 복원한다. 반복 실행에 따라 명예의 전당 확장으로 초기 개체군 품질이 향상되고, MAP-Elites 커버리지 증가로 시드 다양성이 확보되며, AOS 통계 축적으로 연산자 선택 정밀도가 높아진다.</p>
+<h3>8.1 문제 정의: 장시간 실행의 구조적 취약점</h3>
+
+<p>BRAIN API 기반 알파 탐색은 단일 사이클(7라운드)에 수 시간이 소요된다. 세션 만료(약 8시간), 네트워크 단절, 시스템 슬립 등으로 인해 중간에 프로세스가 종료되는 상황이 빈번하다. 체크포인트 없이 실행하면 수 시간의 시뮬레이션 결과가 전부 유실되며, 재시작 시 동일한 탐색 영역을 처음부터 반복하게 된다.</p>
+
+<p>이 문제는 두 가지 차원에서 발생한다. 첫째, 진화 과정에서 축적된 고품질 개체(명예의 전당, 파레토 아카이브)의 유실이다. 둘째, 연산자 선택 통계(AOS)와 SHADE 파라미터 메모리의 유실로 인해 학습된 탐색 전략이 초기화된다.</p>
+
+<h3>8.2 체크포인트 아키텍처</h3>
+
+<p>시스템은 두 종류의 영속 파일을 <code>results/</code> 디렉토리에 생성한다.</p>
 
 <table>
-<caption>표 9: 저장 파일</caption>
-<thead><tr><th>파일</th><th>생성 시점</th><th>수명</th></tr></thead>
+<caption>표 9: 저장 파일 구조</caption>
+<thead><tr><th>파일</th><th>생성 시점</th><th>수명</th><th>용도</th></tr></thead>
 <tbody>
-<tr><td class="left"><code>evolution_YYYYMMDD_HHMMSS.json</code></td><td class="left">7라운드 사이클 완료 시</td><td class="left">누적 (삭제 안 함)</td></tr>
-<tr><td class="left"><code>checkpoint_latest.json</code></td><td class="left">라운드 종료 + 5세대마다</td><td class="left">덮어쓰기 (최신만)</td></tr>
+<tr><td class="left"><code>checkpoint_latest.json</code></td><td class="left">매 세대 종료 시 + 제출 성공 시</td><td class="left">덮어쓰기 (최신만)</td><td class="left">크래시 복구용 스냅샷</td></tr>
+<tr><td class="left"><code>evolution_YYYYMMDD_HHMMSS.json</code></td><td class="left">7라운드 사이클 완료 시</td><td class="left">누적 (삭제 안 함)</td><td class="left">장기 이력 보존</td></tr>
 </tbody>
 </table>
+
+<p><code>checkpoint_latest.json</code>은 매 세대가 끝날 때마다 덮어쓰기로 저장된다. 이는 R1 세대 3에서 프로세스가 종료되더라도 세대 2까지의 결과가 보존됨을 의미한다. 제출 성공 시에도 즉시 체크포인트를 갱신하여, 제출 직후 크래시가 발생해도 제출 기록이 유실되지 않는다.</p>
+
+<h3>8.3 상태 복원 프로세스</h3>
+
+<p>프로그램 시작 시 <code>_load_previous()</code>가 <code>results/</code> 디렉토리의 모든 JSON 파일을 역순으로 스캔한다. 복원 대상은 다음과 같다:</p>
+
+<table>
+<caption>표 10: 복원 대상 및 활용</caption>
+<thead><tr><th>복원 대상</th><th>최대 보존 수</th><th>활용 시점</th></tr></thead>
+<tbody>
+<tr><td class="left">명예의 전당 (Hall of Fame)</td><td>100개</td><td class="left">R2+ 초기 개체군의 <code>evolved</code> 시드</td></tr>
+<tr><td class="left">MAP-Elites 아카이브</td><td>50셀</td><td class="left">섬 2의 <code>map_elites</code> 시드 + 카타클리즘 주입</td></tr>
+<tr><td class="left">파레토 아카이브</td><td>50개</td><td class="left">R2+ 초기 개체군의 상위 8% 이월</td></tr>
+<tr><td class="left">제출 기록</td><td>전체</td><td class="left">중복 제출 방지</td></tr>
+<tr><td class="left">AOS 연산자 통계</td><td>최신 파일</td><td class="left">UCB1 연산자 선택 확률 초기화</td></tr>
+</tbody>
+</table>
+
+<p>복원 과정에서 동일 수식의 중복은 expression 문자열 비교로 제거된다. 명예의 전당은 IQC 점수 기준 상위 100개만 유지하며, 파레토 아카이브에는 score > 2.0인 개체만 추가된다.</p>
+
+<h3>8.4 세션 중단 시 보존/유실 분석</h3>
+
+<p>R3 세대 5에서 세션이 만료되어 프로세스가 종료된 경우를 가정한다.</p>
+
+<table>
+<caption>표 11: 중단 시 데이터 보존 현황</caption>
+<thead><tr><th>데이터</th><th>상태</th><th>설명</th></tr></thead>
+<tbody>
+<tr><td class="left">R1~R2 명예의 전당</td><td style="color:#16a34a">보존</td><td class="left">라운드 종료 시 체크포인트에 저장됨</td></tr>
+<tr><td class="left">R3 세대 1~4 명예의 전당</td><td style="color:#16a34a">보존</td><td class="left">매 세대 체크포인트에 포함</td></tr>
+<tr><td class="left">R3 세대 5 진행 중 개체</td><td style="color:#dc2626">유실</td><td class="left">세대 완료 전 크래시 → 미저장</td></tr>
+<tr><td class="left">MAP-Elites / 파레토</td><td style="color:#16a34a">보존</td><td class="left">체크포인트에 포함</td></tr>
+<tr><td class="left">AOS 통계</td><td style="color:#16a34a">보존</td><td class="left">체크포인트에 포함</td></tr>
+<tr><td class="left">SHADE 메모리</td><td style="color:#dc2626">유실</td><td class="left">체크포인트에 미포함, 기본값으로 초기화</td></tr>
+<tr><td class="left"><code>seen_exprs</code> (중복 방지 셋)</td><td style="color:#dc2626">유실</td><td class="left">메모리 전용, 재시작 시 동일 수식 재시뮬레이션 가능</td></tr>
+<tr><td class="left">score 0.5~1.5 중간 결과</td><td style="color:#dc2626">유실</td><td class="left">명예의 전당 기준(1.5) 미달 → 미저장</td></tr>
+</tbody>
+</table>
+
+<h3>8.5 반복 실행의 누적 효과</h3>
+
+<p>체크포인트 시스템의 핵심 가치는 반복 실행에 따른 누적 학습이다. 첫 번째 사이클에서 R1~R3까지만 완료하고 종료되더라도, 두 번째 실행에서는:</p>
+
+<p class="no-indent" style="margin-left:2em">
+(1) 이전 명예의 전당 개체가 R2+ 초기 개체군의 <code>evolved</code> 슬롯에 주입되어 탐색 시작점이 상향된다.<br>
+(2) MAP-Elites 아카이브의 행동 공간 커버리지가 유지되어 카타클리즘 시 다양한 시드를 제공한다.<br>
+(3) AOS 통계가 복원되어 이전에 효과적이었던 연산자(예: semantic_crossover)가 높은 확률로 선택된다.<br>
+(4) 파레토 아카이브의 비지배 해가 초기 개체군의 8%를 구성하여 다목적 최적화의 출발점을 제공한다.
+</p>
+
+<p>결과적으로 R1은 매번 처음부터 실행되지만, 이전 실행에서 발견된 고품질 개체가 시드로 활용되므로 동일한 탐색을 반복하지 않는다. 다만 R1 자체의 랜덤 탐색 비중이 60%이므로, 새로운 영역의 탐색도 병행된다.</p>
 
 <div class="section-divider">• • •</div>
 
@@ -513,7 +573,7 @@ title: "WQ BRAIN Alpha Evolution"
 <p>초기 개체군 생성 시 사용되는 36개의 검증된 알파 전략 템플릿이다. 각 전략은 호출 시마다 랜덤 파라미터(윈도우, 필드)를 선택하여 다양한 변형을 생성한다.</p>
 
 <table>
-<caption>표 10: 전략 시드 요약 (일부)</caption>
+<caption>표 12: 전략 시드 요약 (일부)</caption>
 <thead><tr><th>#</th><th>전략명</th><th>카테고리</th><th>핵심 로직</th></tr></thead>
 <tbody>
 <tr><td>1</td><td class="left">Short-Term Reversal</td><td>반전</td><td class="left"><code>-rank(ts_delta(close, 5))</code></td></tr>
@@ -539,7 +599,7 @@ title: "WQ BRAIN Alpha Evolution"
 <p>v4에서는 이 두 문제를 해결하기 위해 4개의 독립 모듈과 2개의 기존 모듈 강화를 도입하였다. 각 모듈은 기존 파이프라인에 비침습적으로 통합되며, 모듈 간 의존성 없이 독립적으로 비활성화할 수 있다.</p>
 
 <table>
-<caption>표 10: v4 확장 모듈 구성</caption>
+<caption>표 13: v4 확장 모듈 구성</caption>
 <thead><tr><th>모듈</th><th>파일</th><th>역할</th><th>통합 지점</th></tr></thead>
 <tbody>
 <tr><td class="left">Pattern Learner</td><td class="left"><code>pattern_learner.py</code></td><td class="left">성공 패턴 추출 → 학습 기반 시드 생성</td><td class="left"><code>_create_population()</code></td></tr>
@@ -574,7 +634,7 @@ w_f = \sum_{i \in \text{HoF}} \text{count}(f, \alpha_i) \cdot \lfloor \text{IQC}
 <p>추출된 빈도 분포를 기반으로 AST 트리를 재귀적으로 생성한다. 각 노드에서 30%의 확률로 완전 랜덤 서브트리를 삽입하여 exploitation-exploration 균형을 유지한다. 나머지 70%에서는 다음 확률 분포에 따라 노드 유형을 선택한다:</p>
 
 <table>
-<caption>표 11: 학습 기반 노드 생성 확률</caption>
+<caption>표 14: 학습 기반 노드 생성 확률</caption>
 <thead><tr><th>확률 구간</th><th>노드 유형</th><th>소스</th><th>예시</th></tr></thead>
 <tbody>
 <tr><td>\(r < 0.35\)</td><td class="left">시계열 연산자</td><td class="left">빈출 ts_op + 빈출 윈도우</td><td class="left"><code>ts_decay_linear(close, 10)</code></td></tr>
@@ -601,7 +661,7 @@ w_f = \sum_{i \in \text{HoF}} \text{count}(f, \alpha_i) \cdot \lfloor \text{IQC}
 <p>수식 문자열에서 20차원 특징 벡터 \(\mathbf{x}_\alpha \in \mathbb{R}^{20}\)를 추출한다. 특징은 5개 카테고리로 구성된다:</p>
 
 <table>
-<caption>표 12: Surrogate 특징 벡터 (20차원)</caption>
+<caption>표 15: Surrogate 특징 벡터 (20차원)</caption>
 <thead><tr><th>차원</th><th>카테고리</th><th>특징</th><th>추출 방법</th></tr></thead>
 <tbody>
 <tr><td>1-2</td><td class="left">길이</td><td class="left">수식 길이, 괄호 수</td><td class="left"><code>len(expr)</code>, <code>count("(")</code></td></tr>
@@ -652,7 +712,7 @@ evaluate_only = keep + random_add</code></pre>
 <p>7라운드 진화 완료 후, 미사용 필드에서 15개를 랜덤 샘플링하여 자동 스크리닝을 수행한다. 각 필드에 대해 8가지 표준 테스트 수식을 생성하되, API 호출 효율을 위해 필드당 최대 3개만 실제 시뮬레이션한다:</p>
 
 <table>
-<caption>표 13: 필드 스크리닝 테스트 수식</caption>
+<caption>표 16: 필드 스크리닝 테스트 수식</caption>
 <thead><tr><th>#</th><th>수식 템플릿</th><th>테스트 목적</th></tr></thead>
 <tbody>
 <tr><td>1</td><td class="left"><code>rank(ts_delta({field}, 5))</code></td><td class="left">단기 변화율 모멘텀</td></tr>
@@ -671,7 +731,7 @@ evaluate_only = keep + random_add</code></pre>
 <p>스크리닝 결과는 3단계로 분류된다:</p>
 
 <table>
-<caption>표 14: 필드 분류 기준</caption>
+<caption>표 17: 필드 분류 기준</caption>
 <thead><tr><th>분류</th><th>기준</th><th>후속 처리</th></tr></thead>
 <tbody>
 <tr><td class="left">유망 (Promising)</td><td>Sharpe &gt; 0.3</td><td class="left">유망 필드 풀에 등록, 최고 Sharpe 기록</td></tr>
@@ -699,7 +759,7 @@ L(H) = 5 \cdot n_{\text{ops}} + 7 \cdot n_{\text{fields}} + 4 \cdot n_{\text{par
 </div>
 
 <table>
-<caption>표 15: 기술 길이 구성 요소</caption>
+<caption>표 18: 기술 길이 구성 요소</caption>
 <thead><tr><th>구성 요소</th><th>비트/단위</th><th>근거</th><th>추출 방법</th></tr></thead>
 <tbody>
 <tr><td class="left">연산자 (\(n_{\text{ops}}\))</td><td>5</td><td class="left">\(\lceil \log_2 30 \rceil \approx 5\) (30개 연산자)</td><td class="left"><code>count("(")</code></td></tr>
@@ -728,7 +788,7 @@ L(H) = 5 \cdot n_{\text{ops}} + 7 \cdot n_{\text{fields}} + 4 \cdot n_{\text{par
 </div>
 
 <table>
-<caption>표 16: MDL 페널티 예시</caption>
+<caption>표 19: MDL 페널티 예시</caption>
 <thead><tr><th>수식 예시</th><th>\(L(H)\)</th><th>페널티</th></tr></thead>
 <tbody>
 <tr><td class="left"><code>rank(ts_delta(close, 5))</code></td><td>28</td><td>0%</td></tr>
@@ -763,7 +823,7 @@ L(H) = 5 \cdot n_{\text{ops}} + 7 \cdot n_{\text{fields}} + 4 \cdot n_{\text{par
 <p>v3의 R5(멀티 리전 확장)는 Hall of Fame 상위 20개 알파를 각 리전에서 독립적으로 시뮬레이션하는 단순 전이(transfer) 방식이었다. v4에서는 3단계 파이프라인으로 확장하였다:</p>
 
 <table>
-<caption>표 17: 멀티 리전 라운드 3단계 파이프라인</caption>
+<caption>표 20: 멀티 리전 라운드 3단계 파이프라인</caption>
 <thead><tr><th>Phase</th><th>내용</th><th>API 호출</th></tr></thead>
 <tbody>
 <tr><td class="left">Phase 1: Transfer</td><td class="left">HoF 상위 20개 알파를 전 리전(USA, ASI, CHN, EUR, KOR, JPN, TWN, GLB)에서 시뮬레이션</td><td class="left">20 × 8 = 160</td></tr>
